# prism

./: .gitignore  LICENSE  README.md
backend/: CLAUDE.md  config.py  main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routes/: cost.py  images.py  slides.py  style.py
backend/api/schemas/: cost.py  image.py  slide.py  style.py
backend/clients/: gemini_client.py
backend/models/: project.py  slide.py  style.py
backend/repositories/: image_repository.py  slide_repository.py
backend/services/: cost_service.py  image_service.py  slide_service.py  style_service.py
backend/utils/: hash.py
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: images.ts  index.ts  slides.ts  style.ts
frontend/src/components/common/: Button.tsx  Input.tsx  Modal.tsx
frontend/src/components/home/: ProjectList.tsx
frontend/src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx
frontend/src/components/player/: FullscreenPlayer.tsx
frontend/src/components/preview/: ImagePreview.tsx
frontend/src/components/style/: StylePickerModal.tsx
frontend/src/hooks/: useKeyboard.ts  useSlides.ts
frontend/src/stores/: playerStore.ts  slideStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
